# rust-lambda-xray-example

./: .gitignore  Makefile  README.md
infrastructure/: .terraform.lock.hcl  lambda.tf  main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/modules/lambda/: main.tf  outputs.tf  variables.tf
src/: Cargo.toml  Dockerfile  Dockerfile.base  extracfg.txt
src/handlers/: main.rs
